# musador

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Doxyfile
src/Config/: CMakeLists.txt  Config.h  EntityConfigCategory.h  EntityConfigItem.h
src/Config/src/: Config.cpp
src/Config/test/: Config.h  ConfigTest.h  TestConfig.cpp
src/Database/: Archive.h  CMakeLists.txt  Column.h  Database.h  DatabaseSqlite.h  Entity.h  Json.h  JsonTypes.h  ResultSet.h  ResultSetSqlite.h  SQLStream.h  Sql.h  Storm.h
src/Database/src/: DatabaseSqlite.cpp  Entity.cpp  ResultSet.cpp  ResultSetSqlite.cpp  SQLStream.cpp
src/Database/test/: Database.h  DatabaseTest.cpp  DatabaseTest.h  TestDatabase.cpp  TestEntities.h
src/GUI/: CMakeLists.txt  LibrarianGUI.h
src/GUI/res/: Librarian.rc  resource.h
src/GUI/src/: LibrarianGUI.cpp  main.cpp
src/IO/: BufferChain.h  CMakeLists.txt  Connection.h  IOMessages.h  Listener.h  MessageSink.h  PipeConnection.h  PipeListener.h  Proactor.h  SocketConnection.h  SocketListener.h
src/IO/src/: PipeConnection.cpp  PipeListener.cpp  Proactor.cpp  SocketConnection.cpp  SocketListener.cpp
src/IO/test/: BufferChain.h  TestIO.cpp
src/Indexer/: CMakeLists.txt  ConsoleProgressReporter.h  Entities.h  EntityDir.h  EntityFile.h  Indexer.h
src/Indexer/src/: ConsoleProgressReporter.cpp  EntityDir.cpp  EntityFile.cpp  Indexer.cpp
src/Indexer/test/: Indexer.h  IndexerTest.cpp  IndexerTest.h  TestIndexer.cpp
src/Librarian/: CMakeLists.txt  Config.h  GUIConnection.h  GUIListener.h  Librarian.h  LibrarianController.h  LibrarianGUI.h  Library.h  StatsBlock.h
src/Librarian/res/: Librarian.rc  resource.h
src/Librarian/src/: GUIConnection.cpp  GUIListener.cpp  Librarian.cpp  LibrarianController.cpp  LibrarianGUI.cpp  Library.cpp  main.cpp
src/Logger/: CMakeLists.txt  LogStreamNull.h  Logger.h  LoggerConsole.h
src/Logger.new/: LogStreamConsole.h  Logger.h  LoggerNull.h  LoggerPipeWin.h  Logstream.h
src/Logger.new/src/: Log.cpp  LogStreamConsole.cpp  Logger.cpp  LoggerConsole.cpp  LoggerNull.cpp
src/Logger/src/: LogStreamConsole.cpp  Logger.cpp  LoggerConsole.cpp
src/Logger/test/: Logger.h  LoggerTest.cpp  LoggerTest.h  TestLogger.cpp
src/Network/: CMakeLists.txt  NamedPipe.h  Network.h
src/Network/src/: NamedPipe.cpp  Network.cpp
src/Protocol/: CMakeLists.txt  GUIConnection.h  GUIListener.h  GUIMessages.h
src/Protocol/src/: GUIConnection.cpp  GUIListener.cpp
src/Server/: CMakeLists.txt  Codec.h  Connection.h  ConnectionProcessor.h  Controller.h  EchoConnection.h  EchoListener.h  HTTP.h  HTTPConnection.h  HTTPListener.h  HTTPProtocol.h  HttpProtocolFSM.zargo  IOMessages.h  Listener.h  NullConnection.h  PipeConnection.h  PipeListener.h  Proactor.h  Protocol.h  Server.h  ServerMessages.h  Session.h  SocketConnection.h  SocketListener.h
src/Server/src/: Connection.cpp  ConnectionProcessor.cpp  Controller.cpp  EchoListener.cpp  HTTP.cpp  HTTP.g  HTTPConnection.cpp  HTTPListener.cpp  HTTPProtocol.cpp  PipeConnection.cpp  PipeListener.cpp  Proactor.cpp  Server.cpp  Session.cpp  SocketConnection.cpp
src/Server/test/: Server.h  ServerTest.cpp  ServerTest.h  TestConnection.h  TestServer.cpp
src/UI/: App.h  CMakeLists.txt  Console.h  Daemon.h  Menu.h  TrayIcon.h  WinApp.h  WinMenu.h  WindowsService.h  WindowsShellIcon.h
src/UI/src/: App.cpp  Console.cpp  Menu.cpp  TrayIcon.cpp  WinApp.cpp  WinMenu.cpp  WindowsShellIcon.cpp
src/Utilities/: Base64.h  BufferChain.h  CMakeLists.txt  Console.h  Factory.h  MIMEResolver.h  MTRand.h  MessageSink.h  Property.h  Singleton.h  StreamException.h  TimerQueue.h  Util.h  WinApp.h  WinMenu.h  WindowsService.h  WindowsShellIcon.h  WorldFixture.h
src/Utilities/src/: Base64.cpp  BufferChain.cpp  Console.cpp  MIMEResolver.cpp  TimerQueue.cpp  Util.cpp  WinApp.cpp  WinMenu.cpp  WindowsShellIcon.cpp
src/Utilities/test/: BufferChain.h  TestUtilities.cpp  UtilMisc.h  UtilTest.cpp  UtilTest.h
