PROJECT(Musador)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(	
            ${CMAKE_SOURCE_DIR}/src 
			${CMAKE_SOURCE_DIR}/src/3rdParty
			${CMAKE_SOURCE_DIR}/src/3rdParty/taglib
			${CMAKE_BINARY_DIR}/src/3rdParty/taglib
			${CMAKE_SOURCE_DIR}/src/3rdParty/taglib/taglib/toolkit
			${CMAKE_SOURCE_DIR}/src/3rdParty/boost
			${CMAKE_SOURCE_DIR}/src/3rdParty/UnitTest++
)
	
SOURCE_GROUP("Header Files" REGULAR_EXPRESSION ".*\\.h")

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin )
ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -DBOOST_ALL_NO_LIB -DNOMINMAX )

ENABLE_TESTING()

MACRO(BUILD_UNIT_TEST)
    FILE(GLOB_RECURSE testHdrs test/*.h)
    FILE(GLOB_RECURSE testSrcs test/*.cpp)
	SET(testExe Test${PROJECT_NAME})
    ADD_EXECUTABLE(${testExe} ${testHdrs} ${testSrcs})
	TARGET_LINK_LIBRARIES(${testExe} ${PROJECT_NAME} UnitTest++ ${ARGV})
	ADD_DEPENDENCIES(${testExe} ${PROJECT_NAME} UnitTest++ ${ARGV})
	ADD_TEST(${testExe} ${EXECUTABLE_OUTPUT_PATH}/${testExe}) 
ENDMACRO(BUILD_UNIT_TEST)

MACRO(ADD_FLAG where flag)
	SET(${where} "${${where}} ${flag}")
ENDMACRO(ADD_FLAG)

ADD_FLAG(CMAKE_C_FLAGS_DEBUG /MTd)
ADD_FLAG(CMAKE_C_FLAGS_RELEASE /MT)
ADD_FLAG(CMAKE_CXX_FLAGS_DEBUG /MTd)
ADD_FLAG(CMAKE_CXX_FLAGS_RELEASE /MT)

ADD_SUBDIRECTORY(src/3rdParty/boost)
ADD_SUBDIRECTORY(src/3rdParty/sqlite)
SET (ENABLE_STATIC ON)
ADD_SUBDIRECTORY(src/3rdParty/taglib)
SET (ENABLE_STATIC OFF)
ADD_SUBDIRECTORY(src/3rdParty/UnitTest++)
ADD_SUBDIRECTORY(src/Database)
ADD_SUBDIRECTORY(src/Indexer)
ADD_SUBDIRECTORY(src/IO)
ADD_SUBDIRECTORY(src/Librarian)
ADD_SUBDIRECTORY(src/Protocol)
ADD_SUBDIRECTORY(src/GUI)
ADD_SUBDIRECTORY(src/Logger)
ADD_SUBDIRECTORY(src/Network)
ADD_SUBDIRECTORY(src/Server)
ADD_SUBDIRECTORY(src/UI)
ADD_SUBDIRECTORY(src/Utilities)


